@@ -63,6 +63,25 @@ the current L<Mojolicious> application.
 The above "/dynamic-path/foo.css" will be fetched from the current C<app>
 unless a static file has the same name.
 
+=head2 Wildcards
+
+Assests can be brought in via wildcards:
+
+  app->asset(
+    "bundle.js" => ("/js/myapp.js", "/js/*.js")
+  );
+
+The C</js/*.js> will tell AssetPack to look in all public directories for any
+files mathing the L<wildcard expression|perlfunc/glob>. Note that since
+"myapp.js" is already defined, it will not be added again even if the wildcard
+expression match that file.
+
+If there is a need to set a load precedence, simply add the files that need
+to be loaded first into the array before the wildcard or prefix the filenames
+with a number: C<01-polyfill.js>, C<02-main.js>, ...
+
+This feature is currently EXPERIMENTAL.
+
 =head1 NEXT
 
 Now that you know how to define your assets, you can start using them in
