@@ -1,0 +1,3 @@
+body {
+  background: #a1a1a1;
+}
