@@ -1,0 +1,3 @@
+body {
+  background: #a2a2a2;
+}
