@@ -1,0 +1,3 @@
+body {
+  background: #a5a5a5;
+}
